started image structure

--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
   <head>
   </head>
   <body>
+    <div id="image-container">
+      <div><img id="imageGroup"></div>
+    </div>
+    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
