--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Bus Mall</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+    <header>
+      <h1>Bus Mall</h1>
+    </header>
+    <section>Please Click on the product you are most likely to buy.</section>
     <div id="image-container">
-      <div><img id="imageGroup"></div>
     </div>
     <script src="js/app.js" type="text/javascript"></script>
   </body>
