--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </header>
     <section>Please Click on the product you are most likely to buy.</section>
     <div id="image-container">
+      <p id="place"></p>
     </div>
     <script src="js/app.js" type="text/javascript"></script>
   </body>
