--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <header>
       <h1>Bus Mall</h1>
     </header>
-    <section>Please Click on the product you are most likely to buy.</section>
-    <div id="image-container">
-      <p id="place"></p>
-    </div>
+    <p>Please Click on the product you are most likely to buy.</p>
+    <div id="image-container"></div>
+    <div id="place"></div>
+    <div id="resultsTable"></div>
+
     <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
