--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <title>Bus Mall</title>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header>
       <h1>Bus Mall</h1>
     </header>
-    <p>Please Click on the product you are most likely to buy.</p>
+    <p><h2>Please Click on the product you are most likely to buy.</h2></p>
     <div id="image-container"></div>
     <div id="place"></div>
+    <div id="resultsMessage"></div>
     <div id="resultsTable"></div>
 
     <script src="js/app.js" type="text/javascript"></script>
