--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bus Mall</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
     <header>
