--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div id="resultsMessage"></div>
     <div id="resultsTable"></div>
 
+    <div id="putChartHere"></div>
+    <script type="text/javascript" src="js/canvasjs.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
