working on final scope problems

--- a/index.html
+++ b/index.html
@@ -8,16 +8,28 @@
   <body>
     <header>
       <h1>Bus Mall</h1>
+      <nav><div id="newUserButton"></div><div id="marketerButton"</div></nav>
     </header>
     <p><h2>Please Click on the product you are most likely to buy.</h2></p>
-    <div id="image-container"></div>
-    <div id="place"></div>
-    <div id="resultsMessage"></div>
-    <div id="resultsTable"></div>
+    <section id="replace">
+      <div id="image-container"></div>
+      <div id="place"></div>
+      <div id="resultsMessage"></div>
+      <div id="userButtons">
+        <div id="columnButton"></div>
+        <div id="pieButton"></div>
+      </div>
+      <div id="chart-container"></div>
+    </section>
 
-    <div id="putChartHere"></div>
     <script type="text/javascript" src="js/canvasjs.min.js"></script>
-    <script type="text/javascript" src="js/ajMadeThisHappen.js"></script>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/miscfunctions.js"></script>
+    <script type="text/javascript" src="js/stackedColumn100.js"></script>
+    <script type="text/javascript" src="js/columnGraph.js"></script>
+    <script type="text/javascript" src="js/pie.js"></script>
+    <script type="text/javascript" src="js/newuser.js"></script>
+    <script type="text/javascript" src="js/fifteenvotes.js"></script>
+    <script type="text/javascript" src="js/imageClick.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
