--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
   <body>
     <header>
       <h1>Bus Mall</h1>
-      <nav class="flex-container"><div class="buttons" id="newUserButton"></div><div class="buttons" id="marketerButton"</div></nav>
+      <nav class="flex-container">
+        <div id="newUserButton"></div>
+        <div id="marketerButton"></div>
+      </nav>
     </header>
-    <p><h2>Please Click on the product you are most likely to buy.</h2></p>
+    <h2>Please Click on the product you are most likely to buy.</h2>
     <section id="replace">
       <div id="image-container"></div>
       <div id="place"></div>
       <div id="resultsMessage"></div>
       <div class="flex-container" id="userButtons">
-        <div class="buttons" id="columnButton"></div>
-        <div class="buttons" id="pieButton"></div>
+        <div id="columnButton"></div>
+        <div id="pieButton"></div>
       </div>
       <div id="chart-container"></div>
     </section>
@@ -31,5 +34,6 @@
     <script type="text/javascript" src="js/fifteenvotes.js"></script>
     <script type="text/javascript" src="js/imageClick.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+
   </body>
 </html>
