peer programming draft with completed transition onLoad

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <h2>Please Click on the product you are most likely to buy.</h2>
     <section id="replace">
-      <div id="image-container"></div>
+      <div id="image-container" class="fade"></div>
       <div id="place"></div>
       <div id="resultsMessage"></div>
       <div class="flex-container" id="userButtons">
