--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   </head>
   <body>
     <header>
+      <img id="bus-mall" src="img/busmall_white.png">
       <h1>Bus Mall</h1>
-      <nav class="flex-container">
-        <div id="newUserButton"></div>
-        <div id="marketerButton"></div>
-      </nav>
+      <img id="bus-mirror" src="img/busmirror_white.png">
     </header>
-    <h2>Please Click on the product you are most likely to buy.</h2>
+    <nav class="flex-container">
+      <div id="newUserButton"></div>
+      <h2>Welcome! And thank you for participating in our product survey.<br>
+        Please Click on the product you are most likely to buy.</h2>
+      <div id="marketerButton"></div>
+    </nav>
     <section id="replace">
       <div id="image-container" class="fade"></div>
       <div id="place"></div>
