added chart fade

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="columnButton"></div>
         <div id="pieButton"></div>
       </div>
-      <div id="chart-container"></div>
+      <div id="chart-container" class="fade"></div>
     </section>
 
     <script type="text/javascript" src="js/canvasjs.min.js"></script>
